--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+html{
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+.noscroll{
+    overflow: hidden;
+}
+.noscroll .overlay{
+  display:block;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.video-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.video-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+p{
+  color:rgba(0, 0, 0, 0.65);
+}
+
+.text-center{text-align: center;}
+
+button[disable=true]{
+  cursor:not-allowed;
 }
