--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -18,71 +18,77 @@
   }
 }
 
-.webinar-list,.registed {
+.webinar-list,
+.registed {
   background: $grey;
   padding: 80px 0;
-  /*.card-wrap{
-    display: flex;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  flex-wrap: wrap;
-  max-width: 2360px;
-  width:2360px;
-  &::-webkit-scrollbar {
-    display: none;
-  }*/
-  .card {
-    //flex: 0 0 auto;
-    margin:20px auto;
-    position: relative;
-    width: 95%;
-    height: 300px;
-    padding: 20px;
-    background: #ffffff;
-    border: 1px solid #d6d6d6;
-    box-sizing: border-box;
-    box-shadow: 1px 2px 6px rgba(219, 219, 219, 0.5);
-    border-radius: 4px;
-    .date {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 17px;
-      color: $blue;
-    }
-    h2 {
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 24px;
-    }
-    p {
-      font-size: 14px;
-      line-height: 20px;
-    }
-    .content{
-      p:not(:first-child){
-        display:none;
-      }
-    }
-    .links {
+  .card-wrap {
+    .card-inner {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: absolute;
-      bottom: 20px;
-      left: 0;
-      width: 100%;
-      padding: 0 20px;
-      .reg-link {
-        color: $lt_blue;
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 24px;
+      flex-direction: column;
+      flex-wrap: wrap;
+      height: 680px;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      .card {
+        display: inline-table;
+        margin: 20px;
+        position: relative;
+        width: 350px;
+        height: 300px;
+        padding: 20px;
+        background: #ffffff;
+        border: 1px solid #d6d6d6;
+        box-sizing: border-box;
+        box-shadow: 1px 2px 6px rgba(219, 219, 219, 0.5);
+        border-radius: 4px;
+        .date {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 17px;
+          color: $blue;
+        }
+        h2 {
+          font-weight: 600;
+          font-size: 16px;
+          line-height: 24px;
+        }
+        p {
+          font-size: 14px;
+          line-height: 20px;
+        }
+        .content {
+          p:not(:first-child) {
+            display: none;
+          }
+        }
+        .links {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          position: absolute;
+          bottom: 20px;
+          left: 0;
+          width: 100%;
+          padding: 0 20px;
+          .reg-link {
+            color: $lt_blue;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 24px;
+          }
+        }
+      }
+      @include sm {
+        height: 2040px;
       }
     }
-  //}
-}
-  @include sm{
-    padding:40px 0;
+  }
+  @include sm {
+    padding: 40px 0;
   }
 }
 
